@@ -1,5 +1,6 @@
 package com.petguardian.booking.controller;
 
+import java.time.LocalDateTime;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -16,6 +17,7 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 
+import com.petguardian.area.service.AreaService;
 import com.petguardian.booking.model.BookingDisplayDTO;
 import com.petguardian.booking.model.BookingFavoriteVO;
 import com.petguardian.booking.model.BookingOrderVO;
@@ -57,9 +59,13 @@ public class BookingViewController {
 
     @Autowired
     private SitterMemberRepository sitterMemberRepository;
-    
+
     @Autowired
     private MemberRegisterRepository memberRepository;
+
+    @Autowired
+    private AreaService areaService;
+
     /**
      * 【顯示保姆服務列表頁面】
      * 1. 從資料庫撈取所有保姆資料
@@ -70,32 +76,32 @@ public class BookingViewController {
     @GetMapping("/services")
     public String listSitters(
             @RequestParam(defaultValue = "0") int page, // 正確放置 RequestParam
-            HttpServletRequest request, 
+            HttpServletRequest request,
             Model model) { // 這裡只需一組括號
 
         // 1. 先查出該頁面的 6 位保母 (分頁關鍵)
         Pageable pageable = PageRequest.of(page, 6);
         Page<SitterVO> sitterPage = sitterRepository.findAllActive(pageable);
-        
+
         // 2. 蒐集這 6 位保母的 ID 並補齊「服務地區」
         List<Integer> sitterIds = sitterPage.getContent().stream()
                 .map(SitterVO::getSitterId)
                 .collect(Collectors.toList());
         // 3. 蒐集這 6 位保母的會員 ID 並補齊「頭像」
         List<SitterVO> fullSitters = sitterRepository.findAllWithAreasByIds(sitterIds);
-        
+
         List<Integer> memIds = fullSitters.stream()
                 .map(SitterVO::getMemId)
                 .collect(Collectors.toList());
-        
+
         Map<Integer, String> memberImageMap = new HashMap<>();
         sitterMemberRepository.findAllById(memIds).forEach(m -> {
             String img = (m.getMemImage() != null) ? m.getMemImage() : "/images/default-avatar.png";
             memberImageMap.put(m.getMemId(), img);
         });
-        
+
         Integer currentMemId = authStrategyService.getCurrentUserId(request);
-        
+
         // 4. 建立收藏保姆 ID 的集合 (修正變數名稱與類型)
         java.util.Set<Integer> favSitterIds = new java.util.HashSet<>();
 
@@ -113,28 +119,25 @@ public class BookingViewController {
                 .map(s -> {
                     BookingDisplayDTO dto = new BookingDisplayDTO(s, finalFavIds.contains(s.getSitterId()));
                     dto.setMemImage(memberImageMap.getOrDefault(s.getMemId(), "/images/default-avatar.png"));
-                    
-                    dto.setMemImage(memberImageMap.getOrDefault(
-                            s.getMemId(), 
-                            "/images/default-avatar.png"
-                        ));
-                    
+
                     String city = "沒有設定服務";
                     if (s.getServiceAreas() != null && !s.getServiceAreas().isEmpty()) {
                         // 取得第一個服務地區的城市名稱 (例如：台北市)
                         city = s.getServiceAreas().get(0).getArea().getCityName();
                     }
                     dto.setServicesJson(city);
-                    
+
                     return dto;
                 }).collect(Collectors.toList());
-        
+
         // 6. 將資料傳給前端頁面
         model.addAttribute("sitters", displayList);
         model.addAttribute("currentPage", page);
-        model.addAttribute("totalPages", sitterPage.getTotalPages()); // 修正 odel -> model
+        model.addAttribute("totalPages", sitterPage.getTotalPages());
         model.addAttribute("currentMemId", currentMemId);
-        addCommonAttributes(request, model);
+        model.addAttribute("availableCities", areaService.getAllCities());
+
+        addCommonAttributes(request, model); 
         
         return "frontend/services";
     }
@@ -176,18 +179,50 @@ public class BookingViewController {
                 .filter(s -> s.getSitterStatus() == 0) // 只顯示啟用中的保姆
                 .filter(s -> currentMemId == null || !s.getMemId().equals(currentMemId)) // 不顯示自己
                 .filter(s -> {
-                    // 如果沒有輸入地區，顯示全部
-                    if (area == null || area.trim().isEmpty()) {
+                    if (area == null || area.trim().isEmpty() || "請選擇行政區".equals(area)) {
                         return true;
                     }
-                    // 有輸入地區，則地址必須包含該關鍵字
+                    // 優先檢查服務地區列表
+                            
+                    if (s.getServiceAreas() != null) {
+                        boolean matchArea = s.getServiceAreas().stream()
+                                .anyMatch(sa -> sa.getArea() != null && sa.getArea().getDistrict().equals(area));
+                        if (matchArea) return true;
+                    }
+                    // 備案：檢查地址字串
                     return s.getSitterAdd() != null && s.getSitterAdd().contains(area);
                 })
-                .toList();
+                .collect(Collectors.toList());
 
-        // 4. 傳遞資料給前端
-        model.addAttribute("sitters", filteredSitters);
+        // 4. 取得收藏狀態與頭像 (統一封裝為 DTO)
+        java.util.Set<Integer> favSitterIds = new java.util.HashSet<>();
+        if (currentMemId != null) {
+            favSitterIds = bookingService.getSitterFavoritesByMember(currentMemId)
+                    .stream()
+                    .map(BookingFavoriteVO::getSitterId)
+                    .collect(Collectors.toSet());
+        }
+
+        List<Integer> memIds = filteredSitters.stream().map(SitterVO::getMemId).collect(Collectors.toList());
+        Map<Integer, String> memberImageMap = new HashMap<>();
+        sitterMemberRepository.findAllById(memIds).forEach(m -> {
+            memberImageMap.put(m.getMemId(), m.getMemImage() != null ? m.getMemImage() : "/images/default-avatar.png");
+        });
+
+        final java.util.Set<Integer> finalFavIds = favSitterIds;
+        List<BookingDisplayDTO> displayList = filteredSitters.stream().map(s -> {
+            BookingDisplayDTO dto = new BookingDisplayDTO(s, finalFavIds.contains(s.getSitterId()));
+            dto.setMemImage(memberImageMap.getOrDefault(s.getMemId(), "/images/default-avatar.png"));
+            String city = (s.getServiceAreas() != null && !s.getServiceAreas().isEmpty()) 
+                    ? s.getServiceAreas().get(0).getArea().getCityName() : "全區服務";
+            dto.setServicesJson(city);
+            return dto;
+        }).collect(Collectors.toList());
+
+        // 5. 傳遞資料給前端
+        model.addAttribute("sitters", displayList);
         model.addAttribute("order", new BookingOrderVO());
+        model.addAttribute("availableCities", areaService.getAllCities());
         addCommonAttributes(request, model); // 加入共用資料（如寵物清單）
 
         return "frontend/services";
@@ -208,15 +243,41 @@ public class BookingViewController {
 
         // 1. 取得當前登入使用者 ID
         Integer memId = authStrategyService.getCurrentUserId(request);
-        if (memId == null) {
-            return "redirect:/front/loginpage"; // 未登入，導向登入頁
-        }
+//        if (memId == null) {
+//            return "redirect:/front/loginpage"; // 未登入，導向登入頁
+//        }
 
         // 2. 根據狀態查詢預約（有 status 參數則過濾，沒有則查全部）
         List<BookingOrderVO> bookingList = (status != null)
                 ? bookingService.findByMemberAndStatus(memId, status)
                 : bookingService.getOrdersByMemberId(memId);
 
+        bookingList = bookingList.stream()
+        	    .filter(order -> {
+        	        // [篩選] 已取消的訂單若超過一個月則不顯示
+        	        if (order.getOrderStatus() == 3 || order.getOrderStatus() == 4 || order.getOrderStatus() == 6) {
+        	            LocalDateTime oneMonthAgo = LocalDateTime.now().minusMonths(1);
+        	            // 建議使用 updatedAt 判斷，若無則用 startTime
+        	            LocalDateTime compareDate = (order.getUpdatedAt() != null) ? order.getUpdatedAt() : order.getStartTime();
+        	            return compareDate.isAfter(oneMonthAgo);
+        	        }
+        	        return true;
+        	    })
+        	    .sorted((o1, o2) -> {
+        	        // [排序] 1. 優先權 (進行中=1, 即將到來=2, 服務完成=3, 取消=4)
+        	        int p1 = getOrderPriority(o1.getOrderStatus());
+        	        int p2 = getOrderPriority(o2.getOrderStatus());
+        	        
+        	        if (p1 != p2) return p1 - p2;
+        	        
+        	        // [排序] 2. 同等級內部的細分排序
+        	        if (p1 == 2) { // 即將到來：時間由近到遠 (昇冪)
+        	            return o1.getStartTime().compareTo(o2.getStartTime());
+        	        } else { // 其他（服務中、完成、取消）：時間由新到舊 (降冪)
+        	            return o2.getStartTime().compareTo(o1.getStartTime());
+        	        }
+        	    })
+        	    .collect(Collectors.toList());
         // 3.傳遞資料給前端
         model.addAttribute("bookingList", bookingList);
         model.addAttribute("currentStatus", status);
@@ -232,6 +293,13 @@ public class BookingViewController {
         return "frontend/dashboard-bookings";
     }
 
+    private int getOrderPriority(Integer status) {
+        if (status == 1) return 1; // 進行中
+        if (status == 0) return 2; // 即將到來
+        if (status == 2 || status == 5) return 3; // 完成
+        return 4; // 取消 / 其他
+    }
+    
     /**
      * 【加入頁面常用資料】
      * 如果使用者已登入，載入他的寵物清單
@@ -243,8 +311,17 @@ public class BookingViewController {
         List<PetVO> myPets = (memId != null)
                 ? petRepository.findByMemId(memId)
                 : new java.util.ArrayList<>();
+        
+        SitterVO sitterVO = (memId != null) 
+                ? sitterRepository.findByMemId(memId) 
+                : null;
+        
+        if (memId != null) {
+            memberRepository.findById(memId).ifPresent(m -> model.addAttribute("currentMember", m));
+        }
 
         model.addAttribute("myPets", myPets);
+        model.addAttribute("sitter", sitterVO);
 
     }
 
